[maven-release-plugin] prepare for next development iteration